--- a/templates/login.html
+++ b/templates/login.html
@@ -81,6 +81,7 @@
         <input type="password" name="password" required><br><br>
         <input type="submit" value="Login">
     </form>
+    <p>Do not have an account?<a href="/registration"> Make an account</a></h4>
     </div>
 </body>
 </html>
